# BayesianNetwork

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  MANIFEST.in  README.md  analysis.ipynb  investigate_1.py  investigate_2.py  main.py  network.pickle  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
.github/workflows/: build-test-publish.yml  build-test.yml  reusable_unittests.yml  test.yml  unittests.yml
bayesian_network/: __init__.py  bayesian_network.py  interfaces.py
bayesian_network/common/: extensions.py  statistics.py  tensor_helpers.py  testcase_extensions.py  torch_settings.py
bayesian_network/inference_machines/: abstractions.py  common.py  evidence.py  interfaces.py  naive_inference_machine.py  spa_inference_machine_v1.py  spa_inference_machine_v2.py  spa_inference_machine_v3.py  torch_naive_inference_machine.py  torch_sum_product_algorithm_inference_machine.py  torch_sum_product_algorithm_inference_machine_2.py  (+2 more)
common/: interfaces.py  statistics.py  testcase_extensions.py  utilities.py
dev_experiments/: deleteme.py
docs/: 1. Simple Bayesian network.md  2. Complex Bayesian Network.md  3. EM.ipynb  EM.py  SimpleBayesianNetwork.ipynb  index.md  temp.md
experiments/: experiment.py
inference_engines/: test_torch_naive_inference_machine.py  torch_naive_inference_machine.py  torch_sum_product_algorithm_inference_machine.py
inference_machines/: torch_naive_inference_machine.py  torch_sum_product_algorithm_inference_machine.py
model/: bayesian_network.py  interfaces.py  nodes.py
optimizers/: em_optimizer.py
samplers/: torch_sampler.py
wiki/: TorchSumProductAlgorithmInferenceMachine.md
(+80 files in other folders)
